-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.6.0
-
client and server: lustre-master build #2527
-
3
-
14628
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/5619217a-f9d9-11e3-9447-52540035b04c.
The sub-test test_220 failed with the following error:
test_220 failed with 3
test log
client-30vm3: Pool lustre.test_220 created CMD: client-30vm3 /usr/sbin/lctl pool_add lustre.test_220 lustre-OST0000 client-30vm3: OST lustre-OST0000_UUID added to pool lustre.test_220 preallocated objects on MDS is 45 (7841 - 7796) OST still has 0 kbytes free create 45 files @next_id... open(/mnt/lustre/d220.sanity/f37) error: File too large total: 37 creates in 0.09 seconds: 407.08 creates/second sanity test_220: @@@@@@ FAIL: test_220 failed with 3
MDS 2 console
20:56:42:Lustre: DEBUG MARKER: == sanity test 220: preallocated MDS objects still used if ENOSPC from OST == 20:56:09 (1403322969) 20:56:42:Lustre: 26010:0:(qsd_reint.c:237:qsd_reint_index()) lustre-MDT0001: II_FL_NONUNQ is set on index transfer for fid [0x200000005:0x1011:0x0], it shouldn't be 20:56:42:Lustre: 26010:0:(qsd_reint.c:237:qsd_reint_index()) Skipped 1 previous similar message 20:56:42:LustreError: 12370:0:(lod_qos.c:948:lod_alloc_specific()) can't lstripe objid [0x400002342:0x7ff:0x0]: have 0 want 1
- is related to
-
LU-4340 conf-sanity test_69: error: File too large
-
- Resolved
-